hw_manifests/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hw2-deployment
  name: hw2-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hw2-health
  template:
    metadata:
      labels:
        app: hw2-health
    spec:
      containers:
      - name: hw2-health
        image: ana1oliy/otus.hw:1
        ports:
        - name: hw2-health-port
          containerPort: 8000
