hw_manifests/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw2-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hw2-service
            port:
              number: 8000
