hw_manifests/Ingress_x.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw2-ingress-rewrite
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/miller/(.*)
        pathType: Prefix
        backend:
          service:
            name: hw2-service
            port:
              number: 8000
